# car-location-estimate

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  depth-test-stats.txt  detect.py  evolve.txt  models.py  options.yaml  requirements.txt  results.txt  results_kitti-aug-lr5e4.txt  results_kitti-aug.txt  test.py  train.py
DepthIndicators/: best-depth-indicators.txt  depth-indicators.txt
DepthIndicators/redmine/: Indecators.xlsx  depth-indicators.txt
cfg/: roidepth-kitti.data  roidepth_0_0_1.cfg  roidepth_0_0_2.cfg
data/: cls4.names  cls5.names  roidepth-fv1xm.data  roidepth-kitti.data  roidepth-test.data
docs/: ROI数据采集需求20210315.docx  基于ROI网络进行目目标级深度估计方案.docx  基于ROI网络进行目目标级深度估计网络结构.docx
documents/: ROI数据筛选工具功能需求.docx  ROI数据采集需求.docx  ROI测距误差表.docx  roi_car_0001example.xml  基于ROI网络的目标级深度估计网络实施计划.xlsx
dstool/: dstool.go  go.mod
examples/mnist/: Cargo.toml
examples/mnist/examples/: mnist.rs
examples/mnist/src/: data.rs  model.rs  training.rs
internal/: go.mod
py/: dataset.py  detect.py  indicators.py  model.py  models.py  net.py  preprocess_roi.py  task_factory.py  test.py  train.py  utils.py
py/todo/: layers.py  parse_config.py
py/utils/: datasets.py  google_utils.py  (+4 more)
scripts/: CropKitti2ROI.py  GenerateDatalist.py  PreProcessROI.py  SyncXMLs.py  Visualize.py  cal_indicators.py  crop_kitti.py  distribute_classes.py  generate_data_list.py  preprocess_roi.py  visualize.py
src/: main.rs
tool/: go.mod
utils/: adabound.py  datasets.py  layers.py
weights/: roi_net_1_0_0_pre_1000000.weights  roi_net_1_0_2_1050000_car_person_L2.weights
(+36 files in other folders)
