[package]
name = "mnist"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true

[features]
default = ["burn/dataset", "burn/vision"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
burn = { workspace = true }
